# research-smflooding

./: .gitignore  AMT_VADER.ipynb  Flood_VADER_Classification.ipynb  README.md  RoBERTa and BERT_Model.ipynb  dataset-split-calculator.html  dgx1.job  main.sh  package-lock.json  package.json  pyproject.toml  requirements.txt  slurm-clip-label.job  slurm-clip-polyfill.job  slurm-clip-train.job  slurm-confusionmatrix.job  slurm-confusionmatriximage.job  slurm-imageclassifier.job  slurm-imageclassifier.sh  slurm-imagelabeller.job  slurm-topicanalyser.job  slurm-tweetlabeller.job  slurm.job
configs/: test.toml
gnuplot/: tensorflow-accuracy.plt  tensorflow-accuracy.sh
hackathon-202203/: .gitignore  README.md  cats.py  make_predictions.py  requirements.txt
scripts/: clip-textimages.ipynb  clip_classifier_abl-compgraph.py  glove-plot.mjs  glove2sqlite.sh  join-csvs.mjs  join-emojilabels.mjs  statistics.mjs  transformer-positional-encoding.mjs
src/: UMAP-smwords-glove.ipynb  clip_classifier.py  clip_image_encoder.py  clip_label_tweets.py  clip_media_polyfill.py  confusion_matrix.py  confusion_matrix_image.py  data_splitter.py  find_topics.py  glove-longest.py  glove-test.py  glove_longest.py  image_classifier.py  label_images.py  label_tweets.py  label_tweets_cats.py  label_tweets_topics.py  lda_topics.py  lstm_text_classifier.py  model2tflite.py  settings.clip.default.toml  settings.default.toml  settings.media.default.toml  smwords-glove-UMAP-tSNE-PCA.ipynb  test_glove.py  text_classifier.py  tweets-wildfire-test.ipynb  umapify-generic.py  umapify.py
(+55 files in other folders)
